fix: created route to update by email
